add shoping slider

--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="h-[80px] w-full bg-gray-200 fixed z-10">
+            <div class="container mx-auto h-full w-full flex justify-between items-center">
+                <h1 class="text-4xl font-semibold">Fashion<span class="text-red-500">Hat</span></h1>
+                <div class="flex justify-between items-center gap-5">
+                    <input class="px-3 py-2 w-[300px] outline-none rounded-lg placeholder:text-center text-lg" type="text" id="search-inp" placeholder="Search Your Product">
+                    <i id="shoping-icon" class="fa-solid fa-bag-shopping text-4xl text-green-700"></i>  
+                </div>   
+            </div>
+        </div>
+        <div class="custom-slider bg-gray-200" id="custom-slider">
+            
+        </div>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 </html>
