implement cart count number

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <div class="flex justify-between items-center gap-5">
                     <input class="px-3 py-2 w-[300px] outline-none rounded-lg placeholder:text-center text-lg"
                         type="text" id="search-inp" placeholder="Search Your Product">
-                    <i id="shoping-icon" class="fa-solid fa-bag-shopping text-4xl text-green-700"></i>
+                    <div class="relative">
+                        <i id="shoping-icon" class="fa-solid fa-bag-shopping text-4xl text-green-700"></i>
+                        <span id="card-number" class="absolute bg-red-200 px-1 rounded-full">0</span>
+                    </div>
+                    
                 </div>
             </div>
         </div>
