search function do workable and it working now

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         </div>
     </header>
     <main class="container mx-auto my-[80px] relative">
-        <section class="flex gap-3"> 
-            <div class="w-[20%] h-screen bg-gray-200 custom-class static">
+        <section class="grid grid-cols-4 gap-3"> 
+            <div class="col-span-1 h-screen bg-gray-200 custom-class static">
 
             </div>
-            <div class="w-[80%] h-screen overflow-y-scroll">
-                <div class="flex justify-around text-center flex-wrap gap-3" id="product-cart-container">
+            <div class="col-span-3 ">
+                <div class=" flex justify-around text-center flex-wrap gap-3" id="product-cart-container">
                     
                 </div>
             </div>
