implement scroll event

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body id="scroll">
     <header>
-        <div class="h-[80px] w-full bg-gray-200 fixed z-10">
+        <div class="h-[80px] w-full bg-gray-200  z-10" id="nav-bar">
             <div class="container mx-auto h-full w-full flex justify-between items-center">
                 <h1 class="text-4xl font-semibold">Fashion<span class="text-red-500">Hat</span></h1>
                 <div class="flex justify-between items-center gap-5">
