--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <footer class="w-full h-[20vh] bg-black">
 
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
