--- a/product-checkout.html
+++ b/product-checkout.html
@@ -69,9 +69,11 @@
             </div>
         </section>
     </main>
+
     <footer class="w-full h-[20vh] bg-black">
 
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/product-details.js"></script>
 </body>
