emplemet scroll able navbar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body id="scroll">
+<body>
     <header>
-        <div class="h-[80px] w-full bg-gray-200  z-10 shadow-md" id="nav-bar">
+        <div class="h-[80px] w-full bg-gray-200  z-10" id="nav-bar">
             <div class="container mx-auto h-full w-full flex justify-between items-center">
                 <h1 class="text-4xl font-semibold text-green-700">Fashion<span class="text-red-500">Hat</span></h1>
                 <div class="flex gap-4 text-lg font-semibold text-green-700">
